--- a/app/assets/stylesheets/authentication.scss
+++ b/app/assets/stylesheets/authentication.scss
@@ -103,6 +103,75 @@ header{
   }
 }
 
+.overlay {
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-y: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+    color:#e5e5e5;
+    padding: 0 10%;
+    ul{
+      list-style: none;
+      li{
+        font-weight: bold;
+        font-size: 2em;
+        font-size: 1.5em;
+        span{
+          color:#74ccd1;
+          margin-right:1em; 
+        }
+      }
+    }
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+.info-overlay{
+  position: absolute;
+  right: 20px;
+  color: #000;
+  border: 2px solid #FFF;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #FFF;
+  font-size: 30px;
+  bottom: 30px;
+  cursor: pointer;
+}
+
+
 @media screen and (max-width: 480px) {
   .bg-auth {
     background: #000 url(/assets/login-bg-f68737c739efcf52511001fe60bb74a297111a81874c3ba799b5ccbc8f7d0c03.jpg) no-repeat 0 0 fixed;
@@ -114,6 +183,25 @@ header{
   .auth-box .info-app{
     display: none;
   }
+  .overlay-content {
+      position: relative;
+      top: 5%;
+  }
+  .overlay .closebtn{
+    top: 0;
+    line-height: 60px;
+  }
+  .overlay a{
+    padding:0;
+  }
+  .overlay-content ul{
+    li{
+      font-size: 1em;
+    }
+  }
 }
+
+
+
 
 
