--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,15 +13,24 @@
 
 <section class="main">
 	<div id="center-side" class="users-layout">
+		<% if !@best_matches.blank? %>
+		<div class="best_matches_block">
+			<p class="title-line-hp">Best matches based on your availability and profile in <%= current_user.full_street_address %></p>
+			<div class="cards-list">
+				<%= render partial: "users/user", collection: @best_matches, as: :user  %>
+			</div>
+		</div>
+		<% end %>
+		<p class="title-line no-line">Other people close by you</p>
 		<div class="cards-list" id="users-list" data-turbolinks-partial="users">
+
 			<%= render @users %>
 		</div>
 		<%= will_paginate @users %>
 	</div>
 </section>
 
-
-<%= content_for :aside_left do %>
+<% if false %>
   	<aside class="aside aside-1" data-turbolinks-permanent>
   	<p class="title-line no-line"><%= t('default.mostused') %></p>
   	<div id="filter-column">
@@ -33,4 +42,3 @@
 		</div>
   	</aside>
 <% end %>
-
