--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,21 @@
     <div class="shadow-element"></div>
   </div>
 
+  <span class="info-overlay" onclick="openNav()">?</span>
+  
+  <div id="myNav" class="o-menu">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="o-menu-content">
+      <p><b>Blendin</b> is about bringing people together.<br /> We have seen a growing gap between <b>newcomers</b> and <b>locals</b> in Dutch society and we wish to bridge this gap. <br />That's why we have created this social platform, where everyone can sign up and create an online profile. Based on your shared interests and hobbies you can easily make new connections and start Blendin!</p>
+      <ul>
+      <li><span>1.</span>Make a profile</li>
+      <li><span>2.</span>Tell us when you are available to meet up</li>
+      <li><span>3.</span>Choose one of the best matches we generate for you</li>
+      <li><span>4.</span>Chat and suggest a meet up location to start Blendin!</li>
+      </ul>
+    </div>
+  </div>
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
