--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -38,11 +38,11 @@
           <div class="row features__row">
             <div class="col-md-6 col-lg-3 features__item features__item--06">
               <div class="features__item_icon_circle features__item_icon_circle--06 features__item_icon_circle--tune-icon--blue features__item_icon_circle--icon--big"></div>
-              <h3 class="features__item_title">facebook Messanger</h3><span class="features__item_text features__item_text--06">Chatting with one of our team members, we are going to help you connecting with our network.</span><a href="https://www.facebook.com/blendinnow/" class="button button--blue button--gray-shadow">Chat with us</a>
+              <h3 class="features__item_title">Messenger</h3><span class="features__item_text features__item_text--06">Chatting by  with one of our team members, we are going to help you connecting with our network.</span><a href="https://www.facebook.com/blendinnow/" class="button button--blue button--gray-shadow">Chat with us</a>
             </div>
             <div class="col-md-6 col-lg-3 features__item features__item--06">
               <div class="features__item_icon_circle features__item_icon_circle--06 features__item_icon_circle--zip-icon--blue features__item_icon_circle--icon--big"></div>
-              <h3 class="features__item_title">Whatsapp</h3><span class="features__item_text features__item_text--06">Calling one of the teammembers, add this number to your Rubrica: <a href="tel:+31 6 120 44 388">+31 6 120 44 388</a></span><a href="tel:+31 6 120 44 388" class="button button--blue button--gray-shadow">Call us</a>
+              <h3 class="features__item_title">Whatsapp</h3><span class="features__item_text features__item_text--06">Calling one of the teammembers, add this number to your contacts :) <a href="tel:+31 6 120 44 388">+31 6 120 44 388</a></span><a href="tel:+31 6 120 44 388" class="button button--blue button--gray-shadow">Call us</a>
             </div>
             <div class="col-md-6 col-lg-3 features__item features__item--06">
               <div class="features__item_icon_circle features__item_icon_circle--06 features__item_icon_circle--tune-icon features__item_icon_circle--icon--big"></div>
