--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -32,7 +32,12 @@
       <div style="background-image: url(img/bg/bg--headphones-white.jpg)" class="features features--06">
         <div class="container features__container--06">
           <div class="features__title_box features__title_box--06">
-            <h2 class="features__title--06">Blendin<br>we are one.</h2>
+            <h2 class="features__title--06">
+              <%= link_to(root_path, class: "logo_top" ) do %>
+                <%= image_tag("logo-app.png", class: "") %>
+              <% end %> 
+              we are one.
+            </h2>
             <span class="features__description features__description--06">We connect newcomers (refugees) with Dutch locals, if you are a newcomer or a Dutch citizen we can connect you by:</span>
           </div>
           <div class="row features__row">
@@ -47,6 +52,9 @@
             <div class="col-md-6 col-lg-3 features__item features__item--06">
               <div class="features__item_icon_circle features__item_icon_circle--06 features__item_icon_circle--tune-icon features__item_icon_circle--icon--big"></div>
               <h3 class="features__item_title">Online platform</h3><span class="features__item_text features__item_text--06">Make a profile <br >on our platform <br >and start chatting<br > to get connected!<br >It's free!!</span><a href="#" data-menu-index="07" class="button button--blue button--gray-shadow active js-open-menu">Sign up now</a>
+            </div>
+            <div class="col-md-6 col-lg-3 features__item features__item--06">
+              <div id="leanfund-widget" data-locale="en" data-project-id="10" data-border="3" data-border-color="2080C6" data-background-color="ffffff" data-opacity="0.95" data-button-color="2080C6" data-border-radius="5" data-progress-meter-color="2080C6" data-font-color="424D54" style="margin: 0 auto; max-width: 1000px" ></div>
             </div>
           </div>
         </div>
@@ -89,6 +97,8 @@
       </footer>
     </main>
     
+    <script src="https://www.leanfund.us/widget.js"></script>
+
     <script type="text/javascript">
         var _iub = _iub || [];
           _iub.csConfiguration = {
