--- a/app/assets/stylesheets/authentication.scss
+++ b/app/assets/stylesheets/authentication.scss
@@ -186,8 +186,31 @@ table {
   border-spacing: 0; }
 
 td,
-th {
-  padding: 0; }
+th {padding: 0; }
+
+#error_explanation{
+  position: relative;
+  top: 0;
+  width: 100%;
+  left: 0;
+  color: #FFF;
+  height: 50px;
+  background: red;
+  padding: 0.5em;
+  h2{
+    font-size: 1em;
+    font-weight: normal;
+    margin-bottom: 0;
+  }
+  ul{
+    padding:0;
+    margin:0;
+    font-size: 1em;
+    li{
+      font-size: 0.8em;
+    }
+  }
+}
 
 @media print {
   *,
@@ -5981,7 +6004,7 @@ textarea:focus {
   width: 100%; }
 
 .header {
-  position: absolute;
+  position: relative;
   z-index: 10;
   left: 0;
   right: 0;
