--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+      <%= devise_error_messages! %>
      <header class="header">
       <% if (params[:controller] == "registrations") %>
         <%= link_to "Log in", new_user_session_path(overlay:true), class: "button button--blue button--gray-shadow active abs-btn" %>
@@ -18,7 +19,6 @@
         <%= link_to "Register", new_user_registration_path(overlay:true), class: "button button--blue button--gray-shadow abs-btn" %>
       <% end %>
     </header>
-
     <nav data-menu-index="07" class="menu menu--07 js-menu">
       <div class="menu__container">
         <button type="button" class="menu__closer js-close-menu">close</button>
@@ -29,7 +29,7 @@
     </nav>
 
     <main class="page_wrapper">
-      <div style="background-image: url(img/bg/bg--headphones-white.jpg)" class="features features--06">
+      <div style="background-image: url()" class="features features--06">
         <div class="container features__container--06">
           <div class="features__title_box features__title_box--06">
             <h2 class="features__title--06">
@@ -99,21 +99,7 @@
     
     <script src="https://www.leanfund.us/widget.js"></script>
 
-    <script type="text/javascript">
-        var _iub = _iub || [];
-          _iub.csConfiguration = {
-            cookiePolicyId: 7951305,
-            siteId: 647263,
-            lang: "nl",
-            priorConsent: false,
-             innerHtmlCloseBtn: "OK",
-            banner: {
-              slideDown: false,
-              fontSize: "10px",
-              applyStyles: false
-          }
-      };
-    </script>
+    
     <script>
     function openNav() {
         document.getElementById("myNav").style.height = "100%";
@@ -124,6 +110,15 @@
     }
     </script>
      
-    <script type="text/javascript" src="//cdn.iubenda.com/cookie_solution/safemode/iubenda_cs.js" charset="UTF-8" async></script>
+    <script type="text/javascript">
+      var _iub = _iub || [];
+      _iub.csConfiguration = {
+        cookiePolicyId: 7951305,
+        siteId: 647263,
+        lang: "nl",
+        priorConsent: false
+      };
+    </script>
+    <script type="text/javascript" src= "//cdn.iubenda.com/cookie_solution/safemode/iubenda_cs.js" charset="UTF-8" async></script>
   </body>
 </html>
