--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -46,6 +46,9 @@
             <div class="col-md-6 col-lg-3 features__item features__item--06">
               <div id="leanfund-widget" data-locale="en" data-project-id="10" data-border="3" data-border-color="2080C6" data-background-color="ffffff" data-opacity="0.95" data-button-color="2080C6" data-border-radius="5" data-progress-meter-color="2080C6" data-font-color="424D54" style="margin: 0 auto; max-width: 1000px" ></div>
             </div>
+            <div class="col-md-6 col-lg-3 features__item features__item--06">
+              <div id="leanfund-widget" data-locale="en" data-project-id="10" data-border="3" data-border-color="2080C6" data-background-color="ffffff" data-opacity="0.95" data-button-color="2080C6" data-border-radius="5" data-progress-meter-color="2080C6" data-font-color="424D54" style="margin: 0 auto; max-width: 1000px" ></div>
+            </div>
           </div>
         </div>
       </div>
@@ -88,6 +91,18 @@
         </div>
       </footer>
     </main>
-        
+
+    <script src="https://www.leanfund.us/widget.js"></script>
+    <script type="text/javascript">
+      var _iub = _iub || [];
+      _iub.csConfiguration = {
+        cookiePolicyId: 7951305,
+        siteId: 647263,
+        lang: "nl",
+        priorConsent: false
+      };
+    </script>
+    <script type="text/javascript" src= "//cdn.iubenda.com/cookie_solution/safemode/iubenda_cs.js" charset="UTF-8" async></script>
+
   </body>
 </html>
