New feature like favicon

--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -49,6 +49,12 @@
 		margin-top: 0.5rem;
 	}
 }
+.no-margin{
+	margin: 0;
+	font-size: 2em;
+	font-weight: bold;
+	margin-bottom: 0.3em;
+}
 .mr-30{
 	margin-right:3rem;
 }
