--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -107,7 +107,7 @@
             </div>
             <div class="footer__right_box--05"><span class="footer__social_text--05">Follow us:</span>
               <ul class="social footer__social--05 footer__social_box">
-                <li class="social__item social__item--left_margin"><a href="#" title="Say hello in Facebook!" class="social__link social__link--rounded social__link--facebook"></a></li>
+                <li class="social__item social__item--left_margin"><a href="https://www.facebook.com/blendinnow/" title="Say hello in Facebook!" class="social__link social__link--rounded social__link--facebook"></a></li>
               </ul>
             </div>
           </div>
