--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,5 @@
+
 <%= form_for(@user, :html => {:class => 'columns profile' }) do |f| %>
-
-
 		<div class="column col-3 col-lg-12">
 			<div class="edit-image">
 	    	<img class="rounded user-avatar" id="preview" src="<%= @user.avatar.large_avatar %>">
@@ -12,6 +11,10 @@
 	    <%= render partial: "tags/list", locals: {tags: @user.tag_list} %>
 		</div>
 		<div class="column col-6 col-lg-12">
+			<% if current_user.sign_in_count == 1 %>
+				<h1 class="no-margin">Thanks for your registration!</h1> 
+				<p class="mr-30">We will <b>call you soon</b> to arrange your meet up. In the mean time complete your profile and discover other incredible <b>Blenders!</b></p>
+			<% end %>
 			<% if @user.errors.any? %>
 		    <div id="error_explanation">
 		      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this @user from being saved:</h2>
@@ -93,11 +96,7 @@
 	    <div class="form-group">
 	        <%= f.label "Work experience/academic background", class: "form-label" %>
 	        <%= f.text_field :job, class: "form-input input-lg" %>
-	    </div>
-	    <div class="form-group">
-          <%= f.label :languages, class: "form-label" %>
-          <%= f.text_field :languages, class: "form-input input-lg" %>
-	    </div>    
+	    </div>   
 	    <div class="form-group">
 	        <%= f.label :birthday, class: "form-label" %>
           <%= f.date_select :birthday, {start_year: 1930, end_year: 2000}, { class: 'form-select select-lg'} %>
