--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
 		</div>
 		<div class="column col-6 col-lg-12">
 			<% if current_user.sign_in_count == 1 %>
-				<h1 class="no-margin">Thanks for your registration!</h1> 
+				<h1 class="no-margin">Thanks for your registration!</h1>
 				<p class="mr-30">We will <b>call you soon</b> to arrange your meet up. In the mean time complete your profile and discover other incredible <b>Blenders!</b></p>
 			<% end %>
 			<% if @user.errors.any? %>
@@ -35,14 +35,26 @@
          	<%= f.text_field :email, class: "form-input input-lg" %>
 	    </div>
 	    <div class="clearfix"></div>
-	     	<%= f.label "Are you?" %> 
+	     	<%= f.label "Are you?" %>
      	<br>
-     	<div class="form-group form-radio-btn clearfix">
+     	<!-- <div class="form-group form-radio-btn clearfix">
 		    <%= f.radio_button :local, true, :class => "for_local" %>
 		    <%= f.label :local, 'Local', :value => true, class: "left" %>
-		    <%= f.radio_button :local, false, :class => "for_new" %> 
+		    <%= f.radio_button :local, false, :class => "for_new" %>
 		    <%= f.label :local, 'New in NL', :value => false, class: "right" %>
-	  	</div>
+	  	</div> -->
+			<div class="form-group">
+        <label class="form-radio">
+       		<%= f.radio_button :local, true, :class => "for_local" %>
+					<i class="form-icon"></i>
+					<%= f.label :local, 'Local', :value => true, class: "left" %>
+				</label>
+				<label class="form-radio">
+       		<%= f.radio_button :local, false, :class => "for_new" %>
+					<i class="form-icon"></i>
+					<%= f.label :local, 'New in the Netherlands', :value => false, class: "right" %>
+				</label>
+	    </div>
 	    <div class="form-group">
 	        <%= f.label :full_street_address, class: "form-label" %>
 	    		<%= f.text_field :full_street_address, placeholder: "In which city do you live?", class: "select-city" %>
@@ -78,12 +90,12 @@
 			<div class="form-group">
         <%= f.label :gender, class: "form-label" %>
         <label class="form-radio">
-       		<%= f.radio_button :gender, 'm' %> 
+       		<%= f.radio_button :gender, 'm' %>
 					<i class="form-icon"></i>
 					<%= f.label :gender, 'Male', :value => 'm' %>
 				</label>
 				<label class="form-radio">
-       		<%= f.radio_button :gender, 'f' %> 
+       		<%= f.radio_button :gender, 'f' %>
 					<i class="form-icon"></i>
 					<%= f.label :gender, 'Female', :value => 'f' %>
 				</label>
@@ -91,22 +103,21 @@
 			<div class="form-group">
           <%= f.label "Phone Number", class: "form-label" %>
           <i></i>
-          <%= f.text_field :phone, class: "form-input input-lg" %>
-	    </div>    
+          <%= f.text_field :phone, required: 'true', class: "form-input input-lg" %>
+	    </div>
 	    <div class="form-group">
 	        <%= f.label "Work experience/academic background", class: "form-label" %>
 	        <%= f.text_field :job, class: "form-input input-lg" %>
-	    </div>   
+	    </div>
 	    <div class="form-group">
 	        <%= f.label :birthday, class: "form-label" %>
           <%= f.date_select :birthday, {start_year: 1930, end_year: 2000}, { class: 'form-select select-lg'} %>
-	    </div>    
+	    </div>
 	    <div class="form-group">
           <%= f.label :country, class: "form-label" %>
-          <%= f.country_select :country, {}, {required: 'true', autofocus: 'true', class: 'form-select select-lg'} %>
-	    </div>    
+          <%= f.country_select :country, {}, {required: 'true', class: 'form-select select-lg'} %>
+	    </div>
 	  	<br>
 			<%= f.submit t('btn.confirm'), class: "btn btn-primary btn-lg float-right" %>
 		</div>
 <% end %>
-
